crates/au-cli/tests/it/snapshots/it__scenarios__slot-union.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 16,
                        "line_col": {
                          "end": {
                            "col": 17,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/slot-union/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "slot-union"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "slot-union"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/slot-union/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 88,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 74
            },
            "text": "A rationale"
          },
          {
            "content": "<rationale* | thesis*>",
            "kind": "inline_code",
            "span": {
              "end": 124,
              "line_col": {
                "end": {
                  "col": 36,
                  "line": 8
                },
                "start": {
                  "col": 12,
                  "line": 8
                }
              },
              "start": 100
            }
          }
        ],
        "claim": [
          "rationale"
        ],
        "closure": [
          "rationale"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "rationale",
                "origin_path": "<root>/scenarios/slot-union/type/rationale.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 68,
                        "line_col": {
                          "end": {
                            "col": 49,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 33
                      },
                      "file": "<root>/scenarios/slot-union/cost-savings.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Cost savings drive the migration."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Cost savings drive the migration."
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/slot-union/cost-savings.md",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 71,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 52
            },
            "text": "An evidence file"
          },
          {
            "content": "support",
            "kind": "inline_code",
            "span": {
              "end": 81,
              "line_col": {
                "end": {
                  "col": 10,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 72
            }
          },
          {
            "content": "<rationale* | thesis*>",
            "kind": "inline_code",
            "span": {
              "end": 109,
              "line_col": {
                "end": {
                  "col": 38,
                  "line": 8
                },
                "start": {
                  "col": 14,
                  "line": 8
                }
              },
              "start": 85
            }
          }
        ],
        "claim": [
          "evidence"
        ],
        "closure": [
          "evidence"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "support",
            "origins": [
              {
                "name": "evidence",
                "origin_path": "<root>/scenarios/slot-union/type/evidence.type.yaml",
                "required": true,
                "shape": "<rationale* | thesis*>"
              }
            ],
            "required": true,
            "shape": "<rationale* | thesis*>"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 46,
                        "line_col": {
                          "end": {
                            "col": 28,
                            "line": 3
                          },
                          "start": {
                            "col": 10,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/slot-union/migration-evidence.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "cost-savings"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "cost-savings"
                }
              }
            ],
            "field": "support"
          }
        ],
        "file": "<root>/scenarios/slot-union/migration-evidence.md",
        "section_presence": null
      }
    ]
  }
}
