crates/au-cli/tests/it/snapshots/it__scenarios__string-or-url-discriminator.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 33,
                        "line_col": {
                          "end": {
                            "col": 34,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/string-or-url-discriminator/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "string-or-url-discriminator"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "string-or-url-discriminator"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/string-or-url-discriminator/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 117,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 74
            },
            "text": "String branch — no `^https?://` prefix"
          },
          {
            "content": "String",
            "kind": "inline_code",
            "span": {
              "end": 167,
              "line_col": {
                "end": {
                  "col": 50,
                  "line": 8
                },
                "start": {
                  "col": 42,
                  "line": 8
                }
              },
              "start": 159
            }
          },
          {
            "content": "type:",
            "kind": "inline_code",
            "span": {
              "end": 221,
              "line_col": {
                "end": {
                  "col": 104,
                  "line": 8
                },
                "start": {
                  "col": 97,
                  "line": 8
                }
              },
              "start": 214
            }
          }
        ],
        "claim": [
          "citation"
        ],
        "closure": [
          "citation"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "source",
            "origins": [
              {
                "name": "citation",
                "origin_path": "<root>/scenarios/string-or-url-discriminator/type/citation.type.yaml",
                "required": true,
                "shape": "<String | Url>"
              }
            ],
            "required": true,
            "shape": "<String | Url>"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 68,
                        "line_col": {
                          "end": {
                            "col": 50,
                            "line": 3
                          },
                          "start": {
                            "col": 9,
                            "line": 3
                          }
                        },
                        "start": 27
                      },
                      "file": "<root>/scenarios/string-or-url-discriminator/freeform-citation.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Bowman & Williamson, 2024, Proc. of XYZ"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Bowman & Williamson, 2024, Proc. of XYZ"
                }
              }
            ],
            "field": "source"
          }
        ],
        "file": "<root>/scenarios/string-or-url-discriminator/freeform-citation.md",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 112,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 67
            },
            "text": "Url branch — `^https?://` prefix matches"
          },
          {
            "content": "<String | Url>",
            "kind": "inline_code",
            "span": {
              "end": 129,
              "line_col": {
                "end": {
                  "col": 17,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 113
            }
          },
          {
            "content": "^https?://",
            "kind": "inline_code",
            "span": {
              "end": 166,
              "line_col": {
                "end": {
                  "col": 54,
                  "line": 8
                },
                "start": {
                  "col": 42,
                  "line": 8
                }
              },
              "start": 154
            }
          },
          {
            "content": "Url",
            "kind": "inline_code",
            "span": {
              "end": 244,
              "line_col": {
                "end": {
                  "col": 132,
                  "line": 8
                },
                "start": {
                  "col": 127,
                  "line": 8
                }
              },
              "start": 239
            }
          }
        ],
        "claim": [
          "citation"
        ],
        "closure": [
          "citation"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "source",
            "origins": [
              {
                "name": "citation",
                "origin_path": "<root>/scenarios/string-or-url-discriminator/type/citation.type.yaml",
                "required": true,
                "shape": "<String | Url>"
              }
            ],
            "required": true,
            "shape": "<String | Url>"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 61,
                        "line_col": {
                          "end": {
                            "col": 43,
                            "line": 3
                          },
                          "start": {
                            "col": 9,
                            "line": 3
                          }
                        },
                        "start": 27
                      },
                      "file": "<root>/scenarios/string-or-url-discriminator/url-citation.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "https://arxiv.org/abs/2401.12345"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "https://arxiv.org/abs/2401.12345"
                }
              }
            ],
            "field": "source"
          }
        ],
        "file": "<root>/scenarios/string-or-url-discriminator/url-citation.md",
        "section_presence": null
      }
    ]
  }
}
