crates/au-cli/tests/it/snapshots/it__scenarios__tuple-of-brands.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 21,
                        "line_col": {
                          "end": {
                            "col": 22,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/tuple-of-brands/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "tuple-of-brands"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "tuple-of-brands"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/tuple-of-brands/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "measurement"
        ],
        "closure": [
          "measurement"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "span",
            "origins": [
              {
                "name": "measurement",
                "origin_path": "<root>/scenarios/tuple-of-brands/type/measurement.type.yaml",
                "required": true,
                "shape": "segment"
              }
            ],
            "required": true,
            "shape": "segment"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 55,
                        "line_col": {
                          "end": {
                            "col": 34,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/tuple-of-brands/beam.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "brand": "segment",
                      "elements": [
                        {
                          "brand": "meter",
                          "value": {
                            "kind": "scalar",
                            "value": 1
                          }
                        },
                        {
                          "brand": "meter",
                          "value": {
                            "kind": "scalar",
                            "value": 2
                          }
                        }
                      ],
                      "kind": "tuple"
                    }
                  }
                ],
                "value": {
                  "brand": "segment",
                  "elements": [
                    {
                      "brand": "meter",
                      "value": {
                        "kind": "scalar",
                        "value": 1
                      }
                    },
                    {
                      "brand": "meter",
                      "value": {
                        "kind": "scalar",
                        "value": 2
                      }
                    }
                  ],
                  "kind": "tuple"
                }
              }
            ],
            "field": "span"
          }
        ],
        "file": "<root>/scenarios/tuple-of-brands/beam.md",
        "section_presence": null
      }
    ]
  }
}
